[build-system]
requires = ["setuptools >= 75.0",  "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "The Board of Trustees of the Leland Stanford Junior University, through SLAC National Accelerator Laboratory"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "pyepics",
    "pyyaml",
    "pydantic",
    "h5py",
    "pandas",
    "scikit-image",
    "torch",
    "slac-devices @ git+https://github.com/slaclab/slac-devices.git@main"
]
description = "Tools to support high level application development at LCLS using Python"
dynamic = ["version"]
name = "slac-measurements"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"

[project.optional-dependencies]
meme  = [
    "meme @ git+https://github.com/slaclab/meme.git" # note: direct dependency will block PyPI upload
]
meme-ssh  = [
    "meme @ git+ssh://git@github.com/slaclab/meme.git"
]
edef  = [
    "edef @ git+https://github.com/slaclab/edef.git"
]
edef-ssh  = [
    "edef @ git+ssh://git@github.com/slaclab/edef.git"
]
slac-devices-ssh  = [
    "slac-devices @ git+ssh://git@github.com/slaclab/slac-devices.git@main"
]

[options]
include_package_data = true

[tool.setuptools.packages.find]
include = ["slac_measurements*"]
